--- a/src/components/react/PaymentForm.module.scss
+++ b/src/components/react/PaymentForm.module.scss
@@ -1,23 +1,11 @@
-h1 {
-  width: fit-content;
-  margin-left: 33%;
-  font-size: 96px;
-  font-weight: bold;
-  font-family: 'Inter Variable', sans-serif;
+label, input, textarea {
+  display: block;
 }
 
-span {
-  font-weight: normal;
-  font-size: 1rem;
-}
-
-div {
+.checkboxContainer {
   display: flex;
 
-  input {
-    border: 0;
-    outline: 0;
-    border-bottom: 1px solid black;
-    width: 100%;
+  .checkboxContainerDiv {
+    display: flex;
   }
 }
