--- a/src/pages/receipt/payment.astro
+++ b/src/pages/receipt/payment.astro
@@ -7,9 +7,7 @@ import PaymentData from "../../components/PaymentData.astro";
 <Layout title="Payment Page">
     <PaymentForm client:idle/>
 
-    <hr>
-
-    <PaymentData/>
+    <!--<PaymentData/>-->
 </Layout>
 
 <style lang="scss">
