--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,34 +1,34 @@
 ---
-import "normalize.css"
+import "normalize.css";
 import Header from "../components/Header.astro";
 
 interface Props {
-    title: string;
+  title: string;
 }
 
-const {title} = Astro.props;
+const { title } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="description" content="Astro description"/>
-    <meta name="viewport" content="width=device-width"/>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
-    <meta name="generator" content={Astro.generator}/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-</head>
-<body>
-<Header/>
-<main>
-    <slot/>
-</main>
-</body>
+  </head>
+  <body>
+    <Header />
+    <main>
+      <slot />
+    </main>
+  </body>
 </html>
 <style is:global>
-    main {
-        max-width: 638px;
-        margin: auto;
-    }
+  main {
+    max-width: 638px;
+    margin: auto;
+  }
 </style>
