--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Joyeria La Perla">
-</Layout>
+<Layout title="Joyeria La Perla" />
 
-<style>
-
-</style>
+<style></style>
