Create & Read data

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,9 @@ import logo from "/src/images/logo.webp";
 
 const navigationItems = [
   { page: "Sales", path: "/receipt/sales-and-repair" },
-  { page: "Payment and Repair", path: "/receipt/payment" },
+  { page: "Payment", path: "/receipt/payment" },
+  { page: "Orders", path: "/orders" },
+  { page: "Customers", path: "/customers" },
 ];
 ---
 
