Set foreground for adding payments

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@ import { Image } from "astro:assets";
 import logo from "/src/images/logo.webp";
 
 const navigationItems = [
-  { page: "Sales", path: "/receipt/sales-and-repair" },
   { page: "Payment", path: "/receipt/payment" },
+  { page: "Add Payment", path: "/receipt/add-payment" },
   { page: "Orders", path: "/orders" },
   { page: "Customers", path: "/customers" },
 ];
