--- a/src/pages/receipt/add-payment.astro
+++ b/src/pages/receipt/add-payment.astro
@@ -6,5 +6,5 @@ import AddPayment from "../../components/svelte/AddPayment.svelte";
 <Layout title="Add Payment">
   <h1>Add Payment</h1>
 
-  <AddPayment client:only="svelte" />
+  <AddPayment client:load />
 </Layout>
