--- a/src/pages/orders.astro
+++ b/src/pages/orders.astro
@@ -1,10 +1,14 @@
 ---
-import OrdersData from "../components/OrdersData.astro";
 import Layout from "../layouts/Layout.astro";
+import OrdersData from "../components/svelte/OrdersData.svelte";
+import type { Order } from "../types/ReciptData";
+
+const response = await fetch(`${Astro.url.origin}/api/getOrders`);
+const { result }: { result: Order[] } = await response.json();
 ---
 
 <Layout title="Search">
   <h1>All Orders</h1>
 
-  <OrdersData />
+  <OrdersData result={result} />
 </Layout>
